--- a/20_myInquirer.js/package.json
+++ b/20_myInquirer.js/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cli-table": "^0.3.1",
-    "inquirer": "^7.1.0"
+    "inquirer": "^7.1.0",
+    "inquirer-autocomplete-prompt": "^1.0.2"
   }
 }
